Documents/Projects/EKS setup/helm-repo-jenkins-jfrog/ingress/jfrog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jfrog-ingress
  namespace: artifactory
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
    - host: artifactory.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # Confirm actual service name with:
                # kubectl get svc -n jfrog
                name: artifactory-artifactory-nginx
                port:
                  number: 80
